# adventofcode

./: .gitignore
2024/day1/src/: main  main.rs
2024/day2/: main
2024/day2/src/: main.rs  mainclaude.rs
2024/day3/src/: main.rs
2025/d01/src/: main.rs
2025/d02/src/: main.rs
2025/d03/src/: main.rs
2025/d04/src/: main.rs
2025/d05/: Cargo.toml
2025/d05/src/: main.rs
2025/d06/src/: main.rs
2025/d07/src/: main.rs
